--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -12,7 +12,7 @@
                         <a class="nav-link active" aria-current="page" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/product/">Product</a>
+                        <a class="nav-link" href="/product/">Products</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/about/">About</a>
